# serenity

./: Cargo.toml  MIT.md  README.md  TODO.md  justfile
apps/editor/: Cargo.toml  index.html
apps/editor/src/: editor.rs  main.rs
apps/game/: Cargo.toml  index.html
apps/game/src/: game.rs  lib.rs  main.rs
apps/template/: Cargo.toml  index.html
apps/template/src/: lib.rs  main.rs  template.rs
apps/viewer/: Cargo.toml  index.html
apps/viewer/src/: lib.rs  main.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs
crates/asset/: Cargo.toml
crates/asset/src/: asset.rs  lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs
crates/engine/: Cargo.toml
crates/engine/src/: app.rs  gpu.rs  lib.rs  render.rs  view.rs
crates/gltf/: Cargo.toml
crates/gltf/src/: gltf.rs
crates/phantom/: Cargo.toml
crates/phantom/src/: app.rs  asset.rs  camera.rs  genvec.rs  gltf.rs  lib.rs  physics.rs  render.rs  world.rs
crates/phantom/src/render/: gpu.rs  hdri.rs  postprocess.rs  quad.rs  renderer.rs  sky.rs  view.rs  world.rs
crates/phantom/src/render/shaders/: sky.wgsl
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs  physics.rs  world.rs
crates/render/: Cargo.toml
crates/render/src/: debug.rs  gpu.rs  hdr.rs  hdri.rs  lib.rs  postprocess.rs  render.rs  sky.rs  view.rs
crates/render/src/shaders/: sky.wgsl
crates/serenity/: Cargo.toml
crates/serenity/src/: app.rs  gltf.rs  io.rs  lib.rs  view.rs  world.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
resources/gltf/: physics.glb  test_world.glb
src/: app.rs  debug.rs  fullscreen.rs  gltf.rs  gpu.rs  graph.rs  grid.rs  gui.rs  hdr.rs  io.rs  lib.rs  main.rs  physics.rs  render.rs  scene.rs  sky.rs  transform.rs  view.rs  world.rs
