[workspace]
members = [
    "apps/editor",
    "apps/template",
    "crates/app", "crates/camera",
    "crates/engine",
    "crates/gltf",
    "crates/render",
    "crates/world",
]
resolver = "2"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
