[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "viewer-native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serenity = { path = "../.." }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
