[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.26.2"
egui-winit = { version = "0.26.2", default-features = false }
env_logger = "0.11.3"
log = "0.4.21"
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
pollster = "0.3.0"
uuid = { version = "1.7.0", features = ["v4", "js"] }
winit = "0.29.14"

render = { path = "../render" }
asset = { path = "../asset" }
chrono = "0.4.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "=0.3.67"
