[package]
name = "asset"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
    "convert-mint",
] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.197", features = ["derive"] }
