[package]
name = "serenity"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/matthewjberger/serenity"
repository = "https://github.com/matthewjberger/serenity"

[dependencies]
app = { path = "../app" }
gltf = { path = "../gltf" }
world = { path = "../world" }
