[package]
name = "phantom"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/matthewjberger/phantom"
repository = "https://github.com/matthewjberger/phantom"

[dependencies]
app = { path = "../app" }
phantom_gltf = { path = "../gltf" }
asset = { path = "../asset" }
