[package]
name = "gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
gltf = { version = "1.4.0", features = ["KHR_lights_punctual", "names"] }
image = "0.24.7"
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
world = { path = "../world" }
