[package]
name = "phantom"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/matthewjberger/phantom"
repository = "https://github.com/matthewjberger/phantom"

[dependencies]
anyhow = "1.0.81"
bmfont = { version = "0.3.3", features = ["serde"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
chrono = "0.4.35"
env_logger = "0.11.3"
gltf = { version = "1.4.0", features = ["KHR_lights_punctual", "names"] }
image = "0.24.9"
log = "0.4.21"
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
pollster = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "js"] }
wgpu = "0.19.3"
winit = "0.29.15"
