[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
egui = "0.26.2"
egui-wgpu = { version = "0.26.2", features = ["winit"] }
log = "0.4.20"
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
wgpu = "0.19.1"
world = { path = "../world" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.67"
