[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
egui = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }
image = "0.25.1"
log = "0.4.21"
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
wgpu = "0.19.3"
asset = { path = "../asset" }
anyhow = "1.0.81"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.67"
