[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.193", features = ["derive"] }
